# gwtool

./: .gitignore  README.md  setup.cfg
example/: gateway.yaml
gwtool/: config.py  env.py  libgw.py  utils.py
gwtool/cli/: gw.py  hooks.py  install.py  setup.py
gwtool/install/collectd/: collectd.conf
gwtool/install/coredns/: Corefile  README.md
gwtool/install/dnsmasq/: dnsmasq.conf  dnsmasq.logrotate.conf
gwtool/install/dnsmasq/conf.d/: china-223.conf
gwtool/install/sysctl/: 99-gateway.conf
gwtool/install/vlmcsd/: vlmcsd-sysusers.conf  vlmcsd-tmpfiles.conf  vlmcsd.service
gwtool/netzones/: china.txt  chinanet.txt  cmcc.txt  unicom.txt
gwtool/nftables/: firewall.nft
