[metadata]
name = gwtool
version = file: VERSION
author = Stephen Zhang
author_email = 'stephenpcg@gmail.com'
description = 'Gateway Tool'
long_description = 'Gateway Tool'

classifiers =
    License :: UNLICENSED
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Topic :: System :: Networking
    Topic :: System :: Networking :: Firewalls
    Topic :: Utilities

[options]
python_requires = >= 3.7
packages = find:
package_dir =
  = .
include_package_data = True
install_requires =
   # install required packages via apt
   # apt-get install python3-toml python3-yaml python3-click python3-pyroute2
   # toml
   pyyaml
   click
   pyroute2

[options.package_data]
* =
    *.txt
    *.nft
    *.bin

[options.entry_points]
console_scripts =
  gw = gwtool.cli.gw:cli
  ifaceup = gwtool.cli.hooks:ifaceup
  install = gwtool.cli.install:cli

[flake8]
max-line-length = 120
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
